# Top-Bank

./: .gitignore  README.md  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: pipeline.yml  stabilization.yml
src/: cli.py  main.py
src/domain/: bank_service.py
src/persistence/: account_repo.py
src/presentation/: bank_cli.py  dependencies.py
tests/: test_bank_service.py  test_main.py
