[project]
name = "top-bank"
version = "1.0.0"
description = "Um simples projeto para prática de GitLab Flow"
author = [
    { name = "João Marcos Silva Fernandes de Freitas" , email = "jomasii2@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "pandas>=3.0.2",
    "pydantic>=2.13.3",
    "requests>=2.34.2",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
]

ignore = [
    "E501",
    "B008"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
